--- a/components/upcomingEvents.html
+++ b/components/upcomingEvents.html
@@ -6,7 +6,7 @@
             <div class="col-md-3 col-lg-3" ng-repeat="event in upcomingEvents" style="padding-left: 0">
 
                 <div ng-if="event.timeTo">
-                    <div class="panel panel-primary" ng-click='open(today, event, $index)'>
+                    <div class="panel panel-primary" >
                         <div class="panel-heading"><strong>{{event.name}}</strong> start's in
                             <time-left time="event.timeTo"></time-left>
                         </div>
@@ -18,7 +18,7 @@
                     </div>
                 </div>
 
-                <div ng-if="event.current" ng-click='open(today, event, $index)'>
+                <div ng-if="event.current" >
                     <div class="panel panel-danger">
                         <div class="panel-heading"><strong>{{event.name}}</strong> end's in
                             <time-left time="event.current"></time-left>
